--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "dotenv": "^16.1.4",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
-    "formik": "^2.4.2",
+    "formik": "^2.4.4",
     "i": "^0.3.7",
     "jwt-decode": "^3.1.2",
     "livekit-client": "^1.10.0",
@@ -45,6 +45,7 @@
     "react-icons": "^4.9.0",
     "react-loading-skeleton": "^3.3.1",
     "react-redux": "^8.0.7",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sass": "^1.63.4",
