update room page

--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
 NEXT_PUBLIC_URL_SEVICER = http://localhost:8080
 
-LIVEKIT_API_KEY=APIkTMYfVYwBXj5
-LIVEKIT_API_SECRET=Zlyzqqvy4UYjNB1IjwW9uefeVfNug32ynR1VB0e7Ia8B
+LIVEKIT_API_KEY=APIEvE67Q6DqFCF
+LIVEKIT_API_SECRET=3FrUiUnZaSf7mH2fBUIHeRFEcFa1KiBexGqu2fUU6fPA
+NEXT_PUBLIC_LIVEKIT_URL=wss://hihary-0lfvbdnv.livekit.cloud
 
 # URL pointing to the LiveKit server.
-NEXT_PUBLIC_LIVEKIT_URL=wss://minhnha-umdejj07.livekit.cloud
-NEXT_PUBLIC_BASE_URL=wss://my-livekit-project.livekit.cloud
+
+# NEXT_PUBLIC_BASE_URL=wss://my-livekit-project.livekit.cloud
 
 ## PUBLIC
 NEXT_PUBLIC_LK_TOKEN_ENDPOINT=/api/token
