--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@babel/helper-compilation-targets": "^7.22.15",
     "@types/qs": "^6.9.7",
     "typescript": "^5.1.3"
   }
