--- a/package.json
+++ b/package.json
@@ -2,10 +2,21 @@
   "name": "client-gdsc-meet-base",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "format": "prettier --config .prettierrc --write .",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.15",
+    "@mui/lab": "^5.0.0-alpha.150",
     "@mui/material": "^5.14.15",
-    "@mui/styled-engine": "^5.14.15",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.3",
+    "@mui/styles": "^5.14.15",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -16,23 +27,27 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.28",
     "axios": "^1.6.0",
+    "path-to-regexp": "^6.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "styled-components": "^6.1.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
-  "scripts": {
-    "format": "prettier --config .prettierrc --write .",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@mui/styled-engine": "@mui/styled-engine-sc@^6.0.0-alpha.3",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "prettier": "^3.0.3"
+  },
+  "resolutions": {
+    "@mui/styled-engine": "@mui/styled-engine-sc@^6.0.0-alpha.3"
   },
   "eslintConfig": {
     "extends": [
@@ -51,8 +66,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "prettier": "^3.0.3"
   }
 }
