--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -27,7 +28,10 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-redux": "^7.1.28",
     "axios": "^1.6.0",
+    "formik": "^2.4.5",
+    "framer-motion": "^10.16.4",
     "path-to-regexp": "^6.2.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
@@ -37,8 +41,10 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "styled-components": "^6.1.0",
+    "ts-loader": "^9.5.0",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@mui/styled-engine": "@mui/styled-engine-sc@^6.0.0-alpha.3",
