--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "client-gdsc-meet-base",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
   "scripts": {
+    "start": "craco start",
+    "start:webpack:dev": "webpack serve --config=webpack.config.js --mode development",
+    "start:dev": "react-scripts start",
+    "build": "yarn run clean-dist && webpack --config=webpack.config.js",
+    "clean-dist": "rimraf dist/*",
+    "lint": "eslint './src/**/*.{js,ts,tsx}' --quiet",
+    "start:prod": "yarn run build && node express.js",
     "format": "prettier --config .prettierrc --write .",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -22,10 +28,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/jest": "^29.5.6",
+    "@types/node": "^20.8.9",
+    "@types/react": "^18.2.33",
+    "@types/react-dom": "^18.2.14",
     "@types/react-redux": "^7.1.28",
     "axios": "^1.6.0",
     "formik": "^2.4.5",
@@ -42,15 +48,29 @@
     "redux-thunk": "^2.4.2",
     "styled-components": "^6.1.0",
     "ts-loader": "^9.5.0",
-    "typescript": "^4.4.2",
+    "typescript": "^5.2.2",
     "web-vitals": "^2.1.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@craco/craco": "^7.1.0",
     "@mui/styled-engine": "@mui/styled-engine-sc@^6.0.0-alpha.3",
+    "buffer": "^6.0.3",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.8.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "prettier": "^3.0.3"
+    "file-loader": "^6.2.0",
+    "https-browserify": "^1.0.0",
+    "prettier": "^3.0.3",
+    "stream-http": "^3.2.0",
+    "style-loader": "^3.3.3",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
+    "url": "^0.11.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "resolutions": {
     "@mui/styled-engine": "@mui/styled-engine-sc@^6.0.0-alpha.3"
