perf(server): :zap: refactor API Response

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,7 +41,7 @@
 			"components/*": ["components/*"],
 			"utils/*": ["utils/*"],
 			"api/*": ["api/*"],
-			"context/*": ["context/*"],
+			"contexts/*": ["contexts/*"],
 			"views/*": ["views/*"]
 		},
 
