--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"css-loader": "^6.8.1",
 		"css-minimizer-webpack-plugin": "^5.0.1",
 		"cz-git": "^1.6.1",
+		"esbuild-loader": "^4.0.2",
 		"eslint": "^8.44.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-airbnb-typescript": "^17.0.0",
