--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
 		"socket.io": "^4.7.1",
 		"stream-http": "^3.2.0",
 		"swc-loader": "^0.2.3",
-		"tailwindcss": "^3.3.2",
+		"tailwindcss": "^3.3.5",
 		"terser-webpack-plugin": "^5.3.9",
 		"tsconfig-paths-webpack-plugin": "^4.1.0",
 		"unplugin-auto-import": "^0.16.5",
@@ -87,6 +87,8 @@
 		"@ant-design/icons": "^5.2.6",
 		"@emotion/react": "^11.11.1",
 		"@emotion/styled": "^11.11.0",
+		"@livekit/components-react": "^1.3.0",
+		"@livekit/components-styles": "^1.0.6",
 		"@mui/icons-material": "^5.14.15",
 		"@mui/lab": "^5.0.0-alpha.150",
 		"@mui/material": "^5.14.15",
@@ -98,6 +100,7 @@
 		"axios": "^1.6.0",
 		"formik": "^2.4.5",
 		"framer-motion": "^10.16.4",
+		"livekit-client": "^1.14.2",
 		"path-to-regexp": "^6.2.1",
 		"polished": "^4.2.2",
 		"prop-types": "^15.8.1",
