--- a/package.json
+++ b/package.json
@@ -36,17 +36,22 @@
     "axios": "^1.6.0",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.4",
+    "moment": "^2.29.4",
+    "next-themes": "^0.2.1",
     "path-to-regexp": "^6.2.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "scss": "^0.2.4",
     "styled-components": "^6.1.0",
+    "tailwindcss": "^3.3.5",
     "ts-loader": "^9.5.0",
     "typescript": "^5.2.2",
     "web-vitals": "^2.1.0",
@@ -57,12 +62,19 @@
     "@mui/styled-engine": "@mui/styled-engine-sc@^6.0.0-alpha.3",
     "buffer": "^6.0.3",
     "copy-webpack-plugin": "^11.0.0",
+    "cover": "^0.2.9",
     "css-loader": "^6.8.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.3",
     "https-browserify": "^1.0.0",
+    "postcss": "^8.4.31",
+    "postcss-loader": "^7.3.3",
+    "postcss-preset-env": "^9.2.0",
     "prettier": "^3.0.3",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
     "stream-http": "^3.2.0",
     "style-loader": "^3.3.3",
     "ts-node": "^10.9.1",
