--- a/package.json
+++ b/package.json
@@ -101,18 +101,21 @@
 		"formik": "^2.4.5",
 		"framer-motion": "^10.16.4",
 		"livekit-client": "^1.14.2",
+		"moment": "^2.29.4",
 		"next-themes": "^0.2.1",
 		"path-to-regexp": "^6.2.1",
 		"polished": "^4.2.2",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-icons": "^4.11.0",
 		"react-redux": "^8.1.3",
 		"react-router-dom": "^6.14.1",
 		"react-scripts": "5.0.1",
 		"react-toastify": "^9.1.3",
 		"redux": "^4.2.1",
 		"redux-thunk": "^2.4.2",
+		"sass": "^1.69.5",
 		"styled-components": "^6.0.2",
 		"ts-loader": "^9.5.0",
 		"typescript": "^5.2.2",
