--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"lint-staged": "^13.2.3",
 		"mini-css-extract-plugin": "^2.7.6",
 		"nodemon": "^2.0.22",
+		"path-browserify": "^1.0.1",
 		"postcss": "^8.4.24",
 		"postcss-loader": "^7.3.3",
 		"postcss-preset-env": "^9.0.0",
@@ -101,11 +102,13 @@
 		"formik": "^2.4.5",
 		"framer-motion": "^10.16.4",
 		"livekit-client": "^1.14.2",
+		"lodash": "^4.17.21",
 		"moment": "^2.29.4",
 		"next-themes": "^0.2.1",
 		"path-to-regexp": "^6.2.1",
 		"polished": "^4.2.2",
 		"prop-types": "^15.8.1",
+		"qs": "^6.11.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
