--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
 		"@swc/core": "^1.3.68",
 		"@types/react": "^18.2.14",
+		"@types/styled-components": "^5.1.29",
 		"@types/webpack-env": "^1.18.1",
 		"autoprefixer": "^10.4.14",
 		"babel-loader": "^9.1.2",
