--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
 	"files": [
 		"config/auto-imports.d.ts",
 		"config/types/ImportMeta.d.ts",
-		"src/static.d.ts"
+		"src/static.d.ts",
+		"tailwind.config.js"
 	],
 	"include": ["src/**/*.js", "src/**/*.ts", "src/**/*.jsx", "src/**/*.tsx"],
 	"compilerOptions": {
