chore: :shrug: update Dockerfile

--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+	"name": "gdscmeet",
+	"author": "taskcafe team",
+	"email": "dangnhatminh@gmail.com",
+	"license": "MIT",
+	"version": "0.0.1",
+	"private": true,
 	"scripts": {
 		"dev": "cross-env ENV=development PORT=3000 IO_PORT=3030 webpack serve --mode=development --hot",
 		"build": "tsc && webpack --mode=production",
@@ -21,18 +27,20 @@
 		"isomorphic-fetch@*": "$isomorphic-fetch"
 	},
 	"devDependencies": {
+		"@babel/plugin-syntax-flow": "^7.14.5",
+		"@babel/plugin-transform-react-jsx": "^7.14.9",
 		"@babel/core": "^7.22.6",
 		"@babel/plugin-proposal-class-properties": "^7.18.6",
 		"@babel/preset-env": "^7.22.6",
 		"@babel/preset-react": "^7.22.5",
 		"@babel/preset-typescript": "^7.22.5",
 		"@commitlint/config-conventional": "^17.6.6",
-		"@craco/craco": "^7.1.0",
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
 		"@swc/core": "^1.3.68",
 		"@types/react": "^18.2.14",
 		"@types/styled-components": "^5.1.29",
 		"@types/webpack-env": "^1.18.1",
+		"@testing-library/dom": "^7.21.4",
 		"autoprefixer": "^10.4.14",
 		"babel-loader": "^9.1.2",
 		"buffer": "^6.0.3",
@@ -48,7 +56,8 @@
 		"esbuild-loader": "^4.0.2",
 		"eslint": "^8.44.0",
 		"eslint-config-airbnb": "^19.0.4",
-		"eslint-config-airbnb-typescript": "^17.0.0",
+		"@typescript-eslint/eslint-plugin": "^7.0.0-alpha.0",
+		"@typescript-eslint/parser": "^6.0.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-import-resolver-custom-alias": "^1.3.2",
 		"eslint-plugin-import": "^2.27.5",
@@ -109,7 +118,6 @@
 		"path-to-regexp": "^6.2.1",
 		"polished": "^4.2.2",
 		"prop-types": "^15.8.1",
-		"qs": "^6.11.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
