--- a/package.json
+++ b/package.json
@@ -27,20 +27,22 @@
 		"isomorphic-fetch@*": "$isomorphic-fetch"
 	},
 	"devDependencies": {
-		"@babel/plugin-syntax-flow": "^7.14.5",
-		"@babel/plugin-transform-react-jsx": "^7.14.9",
 		"@babel/core": "^7.22.6",
 		"@babel/plugin-proposal-class-properties": "^7.18.6",
+		"@babel/plugin-syntax-flow": "^7.14.5",
+		"@babel/plugin-transform-react-jsx": "^7.14.9",
 		"@babel/preset-env": "^7.22.6",
 		"@babel/preset-react": "^7.22.5",
 		"@babel/preset-typescript": "^7.22.5",
 		"@commitlint/config-conventional": "^17.6.6",
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
 		"@swc/core": "^1.3.68",
+		"@testing-library/dom": "^7.21.4",
 		"@types/react": "^18.2.14",
 		"@types/styled-components": "^5.1.29",
 		"@types/webpack-env": "^1.18.1",
-		"@testing-library/dom": "^7.21.4",
+		"@typescript-eslint/eslint-plugin": "^7.0.0-alpha.0",
+		"@typescript-eslint/parser": "^6.0.0",
 		"autoprefixer": "^10.4.14",
 		"babel-loader": "^9.1.2",
 		"buffer": "^6.0.3",
@@ -56,8 +58,6 @@
 		"esbuild-loader": "^4.0.2",
 		"eslint": "^8.44.0",
 		"eslint-config-airbnb": "^19.0.4",
-		"@typescript-eslint/eslint-plugin": "^7.0.0-alpha.0",
-		"@typescript-eslint/parser": "^6.0.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-import-resolver-custom-alias": "^1.3.2",
 		"eslint-plugin-import": "^2.27.5",
@@ -101,6 +101,7 @@
 		"@livekit/components-react": "^1.3.0",
 		"@livekit/components-styles": "^1.0.6",
 		"@mui/icons-material": "^5.14.15",
+		"@mui/joy": "^5.0.0-beta.14",
 		"@mui/lab": "^5.0.0-alpha.150",
 		"@mui/material": "^5.14.15",
 		"@mui/styles": "^5.14.16",
