--- a/package.json
+++ b/package.json
@@ -103,13 +103,14 @@
 		"@mui/icons-material": "^5.14.15",
 		"@mui/joy": "^5.0.0-beta.14",
 		"@mui/lab": "^5.0.0-alpha.150",
-		"@mui/material": "^5.14.15",
+		"@mui/material": "^5.14.18",
 		"@mui/styles": "^5.14.16",
 		"@reduxjs/toolkit": "^1.9.7",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^13.0.0",
 		"@testing-library/user-event": "^13.2.1",
 		"axios": "^1.6.0",
+		"date-fns": "^2.30.0",
 		"formik": "^2.4.5",
 		"framer-motion": "^10.16.4",
 		"livekit-client": "^1.14.2",
@@ -122,6 +123,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
+		"react-infinite-scroll-component": "^6.1.0",
 		"react-redux": "^8.1.3",
 		"react-router-dom": "^6.14.1",
 		"react-scripts": "5.0.1",
