--- a/package.json
+++ b/package.json
@@ -121,7 +121,10 @@
 		"polished": "^4.2.2",
 		"prop-types": "^15.8.1",
 		"react": "^18.2.0",
+		"react-doc-viewer": "^0.1.5",
+		"react-docx": "^1.0.1",
 		"react-dom": "^18.2.0",
+		"react-file-viewer": "^1.2.1",
 		"react-icons": "^4.11.0",
 		"react-infinite-scroll-component": "^6.1.0",
 		"react-redux": "^8.1.3",
