--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
 		"@swc/core": "^1.3.68",
 		"@testing-library/dom": "^7.21.4",
+		"@types/lodash": "^4.14.201",
 		"@types/react": "^18.2.14",
 		"@types/styled-components": "^5.1.29",
 		"@types/webpack-env": "^1.18.1",
