--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
 		"@types/react": "^18.2.14",
 		"@types/styled-components": "^5.1.29",
 		"@types/webpack-env": "^1.18.1",
-		"@typescript-eslint/eslint-plugin": "^7.0.0-alpha.0",
-		"@typescript-eslint/parser": "^6.0.0",
+		"@typescript-eslint/eslint-plugin": "^6.11.0",
+		"@typescript-eslint/parser": "^6.11.0",
 		"autoprefixer": "^10.4.14",
 		"babel-loader": "^9.1.2",
 		"buffer": "^6.0.3",
@@ -57,8 +57,9 @@
 		"css-minimizer-webpack-plugin": "^5.0.1",
 		"cz-git": "^1.6.1",
 		"esbuild-loader": "^4.0.2",
-		"eslint": "^8.44.0",
+		"eslint": "^8.54.0",
 		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-airbnb-typescript": "^17.1.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-import-resolver-custom-alias": "^1.3.2",
 		"eslint-plugin-import": "^2.27.5",
