--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.22.6",
+		"@babel/generator": "^7.23.3",
 		"@babel/plugin-proposal-class-properties": "^7.18.6",
 		"@babel/plugin-syntax-flow": "^7.14.5",
 		"@babel/plugin-transform-react-jsx": "^7.14.9",
@@ -40,6 +41,7 @@
 		"@testing-library/dom": "^7.21.4",
 		"@types/lodash": "^4.14.201",
 		"@types/react": "^18.2.14",
+		"@types/react-router-dom": "^5.3.3",
 		"@types/styled-components": "^5.1.29",
 		"@types/webpack-env": "^1.18.1",
 		"@typescript-eslint/eslint-plugin": "^6.11.0",
