--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
 		"@testing-library/react": "^13.0.0",
 		"@testing-library/user-event": "^13.2.1",
 		"axios": "^1.6.0",
+		"date-fns": "^2.30.0",
 		"formik": "^2.4.5",
 		"framer-motion": "^10.16.4",
 		"livekit-client": "^1.14.2",
