--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
 		"react-toastify": "^9.1.3",
 		"redux": "^4.2.1",
 		"redux-thunk": "^2.4.2",
+		"rxjs": "^7.8.1",
 		"sass": "^1.69.5",
 		"styled-components": "^6.0.2",
 		"ts-loader": "^9.5.0",
