--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
 		"purgecss-webpack-plugin": "^5.0.0",
 		"quicktype-core": "^23.0.49",
 		"react-refresh": "^0.14.0",
-		"socket.io": "^4.7.1",
+		"socket.io": "^4.7.2",
 		"stream-http": "^3.2.0",
 		"swc-loader": "^0.2.3",
 		"tailwindcss": "^3.3.5",
@@ -108,7 +108,7 @@
 		"@mui/joy": "^5.0.0-beta.14",
 		"@mui/lab": "^5.0.0-alpha.150",
 		"@mui/material": "^5.14.15",
-		"@mui/styles": "^5.14.16",
+		"@mui/styles": "^5.14.18",
 		"@reduxjs/toolkit": "^1.9.7",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^13.0.0",
@@ -119,6 +119,7 @@
 		"framer-motion": "^10.16.4",
 		"livekit-client": "^1.14.2",
 		"lodash": "^4.17.21",
+		"microsoft-cognitiveservices-speech-sdk": "^1.33.1",
 		"moment": "^2.29.4",
 		"next-themes": "^0.2.1",
 		"path-to-regexp": "^6.2.1",
