update Ai sumary

--- a/package.json
+++ b/package.json
@@ -118,11 +118,13 @@
 		"framer-motion": "^10.16.4",
 		"livekit-client": "^1.14.2",
 		"lodash": "^4.17.21",
+		"microsoft-cognitiveservices-speech-sdk": "^1.33.1",
 		"moment": "^2.29.4",
 		"next-themes": "^0.2.1",
 		"path-to-regexp": "^6.2.1",
 		"polished": "^4.2.2",
 		"prop-types": "^15.8.1",
+		"qs": "^6.11.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
