--- a/package.json
+++ b/package.json
@@ -102,8 +102,10 @@
 		"@ant-design/icons": "^5.2.6",
 		"@emotion/react": "^11.11.1",
 		"@emotion/styled": "^11.11.0",
+		"@google-ai/generativelanguage": "^2.0.0",
 		"@livekit/components-react": "^1.3.0",
 		"@livekit/components-styles": "^1.0.6",
+		"@livekit/react-core": "^1.1.0",
 		"@mui/icons-material": "^5.14.15",
 		"@mui/joy": "^5.0.0-beta.14",
 		"@mui/lab": "^5.0.0-alpha.150",
@@ -114,17 +116,20 @@
 		"@testing-library/react": "^13.0.0",
 		"@testing-library/user-event": "^13.2.1",
 		"axios": "^1.6.0",
+		"date-fns": "^3.0.5",
 		"formik": "^2.4.5",
 		"framer-motion": "^10.16.4",
 		"livekit-client": "^1.14.2",
 		"lodash": "^4.17.21",
 		"microsoft-cognitiveservices-speech-sdk": "^1.33.1",
 		"moment": "^2.29.4",
+		"net-browserify": "^0.2.4",
 		"next-themes": "^0.2.1",
 		"path-to-regexp": "^6.2.1",
 		"polished": "^4.2.2",
 		"prop-types": "^15.8.1",
 		"qs": "^6.11.2",
+		"querystring-es3": "^0.2.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.11.0",
@@ -136,6 +141,7 @@
 		"redux-thunk": "^2.4.2",
 		"rxjs": "^7.8.1",
 		"sass": "^1.69.5",
+		"stream-browserify": "^3.0.0",
 		"styled-components": "^6.0.2",
 		"ts-loader": "^9.5.0",
 		"typescript": "^5.2.2",
