--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
 		"redux-thunk": "^2.4.2",
 		"rxjs": "^7.8.1",
 		"sass": "^1.69.5",
+		"socket.io-client": "^4.7.2",
 		"stream-browserify": "^3.0.0",
 		"styled-components": "^6.0.2",
 		"ts-loader": "^9.5.0",
